[gd_scene load_steps=6 format=3 uid="uid://84syvybksu48"]

[ext_resource type="StyleBox" uid="uid://8iymk5osuhqr" path="res://demo/style_box_flat.tres" id="1_ev572"]
[ext_resource type="Script" path="res://demo/text_example.gd" id="2_blgcj"]
[ext_resource type="Script" path="res://demo/summation_example.gd" id="3_ergyd"]
[ext_resource type="Script" path="res://demo/slider_example.gd" id="3_xcnpp"]
[ext_resource type="Script" path="res://demo/tab_example.gd" id="4_83hkj"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 214.0
offset_bottom = 263.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="TextExample" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_ev572")
script = ExtResource("2_blgcj")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer/TextExample"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/TextExample/VBoxContainer"]
layout_mode = 2
text = "Text Example"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/Control/MarginContainer/GridContainer/TextExample/VBoxContainer"]
layout_mode = 2
text = "Change Me"

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/TextExample/VBoxContainer"]
layout_mode = 2

[node name="SumExample" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_ev572")
script = ExtResource("3_ergyd")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer/SumExample"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/SumExample/VBoxContainer"]
layout_mode = 2
text = "Summation Example"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer/SumExample/VBoxContainer"]
layout_mode = 2

[node name="LineEdit1" type="LineEdit" parent="CanvasLayer/Control/MarginContainer/GridContainer/SumExample/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "1"

[node name="plus" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/SumExample/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "+"

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer/Control/MarginContainer/GridContainer/SumExample/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "2"

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/SumExample/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "= 1"

[node name="SliderExample" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_ev572")
script = ExtResource("3_xcnpp")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer/SliderExample"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/SliderExample/VBoxContainer"]
layout_mode = 2
text = "Slider Example"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer/SliderExample/VBoxContainer"]
layout_mode = 2

[node name="Sub" type="Button" parent="CanvasLayer/Control/MarginContainer/GridContainer/SliderExample/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sub"

[node name="Add" type="Button" parent="CanvasLayer/Control/MarginContainer/GridContainer/SliderExample/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/SliderExample/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control/MarginContainer/GridContainer/SliderExample/VBoxContainer"]
layout_mode = 2
max_value = 10.0

[node name="TabExample" type="PanelContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_ev572")
script = ExtResource("4_83hkj")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/GridContainer/TabExample"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/TabExample/VBoxContainer"]
layout_mode = 2
text = "Tab Example"

[node name="TabBar" type="TabBar" parent="CanvasLayer/Control/MarginContainer/GridContainer/TabExample/VBoxContainer"]
layout_mode = 2
tab_count = 3
tab_0/title = "First Tab"
tab_1/title = "Second Tab"
tab_2/title = "Third Tab"

[node name="FirstTabLabel" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/TabExample/VBoxContainer"]
layout_mode = 2
text = "First Tab"

[node name="SecondTabLabel" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/TabExample/VBoxContainer"]
layout_mode = 2
text = "Second Tab"

[node name="ThirdTabLabel" type="Label" parent="CanvasLayer/Control/MarginContainer/GridContainer/TabExample/VBoxContainer"]
layout_mode = 2
text = "Third Tab"
